svnconnector Diff por revision por issue & url base (trunk o branch) donde se hicieron los cambios de la revision